--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -2,9 +2,9 @@
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/20/n13175453.md#1" target="_blank"> 15种“最干净蔬果” 第一名你经常吃</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/20/n13175453.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13178867-clean-dozen_192640940-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank"> 天然免疫力比疫苗更强大？</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159543-shutterstock2_1800070318-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/4/n13138086.md#1" target="_blank"> 打2剂疫苗仍难防感染 有1原因</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/4/n13138086.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13139827-shutterstock_1908980830-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208163.md#1" target="_blank"> 【重播】防疫榜样以色列 成疫情第一严重国家</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208163.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13208610-9.3.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205314.md#1" target="_blank"> 【重播】迄今最强变种出现？C12变种危险吗</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205314.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205327-9.2.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13202796.md#1" target="_blank"> 【直播】打疫苗感染风险 高于二次感染13倍？</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13202796.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13202991-9.1.21-web-Health-Live-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200195.md#1" target="_blank"> 【重播】恼人皮肤病解决方法大全</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200195.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13200303-8.31.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/17/n13167367.md#1" target="_blank">挖耳朵、游泳 耳朵发痒疼痛？3招防外耳炎</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/17/n13167367.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13174583-shutterstock2_1926215924-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/17/n13168285.md#1" target="_blank">【重播】疫苗会影响月经和受孕吗？</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/17/n13168285.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13168468-8.17.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/26/n13189596.md#1" target="_blank">男性也会患乳癌 5类人为高危险群</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/26/n13189596.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13189998-shutterstock_1845826489-320x200.jpg"></a></td></tr>
@@ -24,8 +24,8 @@
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13196778.md#1" target="_blank">痛风年轻化有一大原因 中医推荐快速缓解食物</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/30/n13197965.md#1" target="_blank">肌肉少易得糖尿病！医师：控血糖最有效的运动</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13199454.md#1" target="_blank">改善五十肩 2个简单动作拉开肩关节沾黏</a><br></h3>
-<h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201822.md#1" target="_blank">新研究揭最佳睡眠时间 预防失智、忧郁症</a><br></h3>
+<h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/1/n13201822.md#1" target="_blank">远离失智、忧郁症！研究揭最佳睡眠时间</a><br></h3>
 <h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/2/n13205314.md#1" target="_blank">【重播】迄今最强变种出现？C12变种危险吗</a><br></h3>
-<h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208163.md#1" target="_blank">【直播】防疫榜样以色列 成疫情第一严重国家</a><br></h3>
+<h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208163.md#1" target="_blank">【重播】防疫榜样以色列 成疫情第一严重国家</a><br></h3>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zeqdou3554/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/zeqdou3554/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
